// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationBar/> default props 1`] = `
<nav
  className="navbar navbar-container test-loc-nav-header"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="navbar-left col-xs-8 col-md-7"
      >
        <span
          className="navbar-item pull-left"
        />
      </div>
      <div
        className="navbar-right col-xs-4 col-md-5"
      />
    </div>
  </div>
</nav>
`;

exports[`<NavigationBar/> with findByIds 1`] = `
<nav
  className="navbar navbar-container test-loc-nav-header"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="navbar-left col-xs-8 col-md-7"
      >
        <span
          className="navbar-item pull-left"
        />
      </div>
      <div
        className="navbar-right col-xs-4 col-md-5"
      >
        <div
          className="navbar-item pull-right"
        >
          <div
            className="hidden-md hidden-sm hidden-xs"
          >
            <form
              className="navbar__search-form"
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <i
                  className="fa fa-search navbar__search-icon"
                />
                <span
                  className="navbar__input-group input-group"
                >
                  <input
                    className="form-control navbar__search-input"
                    onChange={[Function]}
                    placeholder="Enter Search Terms"
                    size={34}
                    type="text"
                    value=""
                  />
                  <span
                    className="input-group-btn"
                  >
                    <div
                      className="dropdown btn-group"
                    >
                      <button
                        aria-expanded={false}
                        aria-haspopup={true}
                        className="navbar__find-and-search-button undefined dropdown-toggle btn btn-default"
                        disabled={false}
                        id="find-and-search-menu"
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        role="button"
                        type="button"
                      >
                         
                        <span
                          className="caret"
                        />
                      </button>
                      <ul
                        aria-labelledby="find-and-search-menu"
                        className="dropdown-menu"
                        role="menu"
                      >
                        <li
                          className=""
                          role="presentation"
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            <i
                              className="fa fa-barcode"
                            />
                             Find 
                            Samples
                             by Barcode
                          </a>
                        </li>
                        <li
                          className=""
                          role="presentation"
                        >
                          <a
                            href="#"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            <i
                              className="fa fa-hashtag"
                            />
                             Find 
                            Samples
                             by ID
                          </a>
                        </li>
                        <li
                          className=""
                          role="presentation"
                        >
                          <a
                            href="#/search/samplesByFilter"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="menuitem"
                            tabIndex="-1"
                          >
                            <i
                              className="fa fa-sitemap"
                            />
                             Sample Finder
                          </a>
                        </li>
                      </ul>
                    </div>
                  </span>
                </span>
              </div>
            </form>
          </div>
          <div
            className="visible-md visible-sm visible-xs"
          >
            <div
              className="dropdown btn-group"
            >
              <button
                aria-expanded={false}
                aria-haspopup={true}
                className="navbar__find-and-search-button navbar__xs-find-dropdown dropdown-toggle btn btn-default"
                disabled={false}
                id="find-and-search-menu"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                type="button"
              >
                <i
                  className="fa fa-search navbar__xs-search-icon"
                />
                 
                <span
                  className="caret"
                />
              </button>
              <ul
                aria-labelledby="find-and-search-menu"
                className="dropdown-menu"
                role="menu"
              >
                <li
                  className=""
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    <i
                      className="fa fa-barcode"
                    />
                     Find 
                    Samples
                     by Barcode
                  </a>
                </li>
                <li
                  className=""
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    <i
                      className="fa fa-hashtag"
                    />
                     Find 
                    Samples
                     by ID
                  </a>
                </li>
                <li
                  className=""
                  role="presentation"
                >
                  <a
                    href="#/search/samplesByFilter"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    <i
                      className="fa fa-sitemap"
                    />
                     Sample Finder
                  </a>
                </li>
                <li
                  className=""
                  role="presentation"
                >
                  <a
                    href="#"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="menuitem"
                    tabIndex="-1"
                  >
                    <i
                      className="fa fa-search"
                    />
                     Search
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<NavigationBar/> with search box 1`] = `
<nav
  className="navbar navbar-container test-loc-nav-header"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="navbar-left col-xs-8 col-md-7"
      >
        <span
          className="navbar-item pull-left"
        />
      </div>
      <div
        className="navbar-right col-xs-4 col-md-5"
      >
        <div
          className="navbar-item pull-right"
        >
          <div
            className="hidden-md hidden-sm hidden-xs"
          >
            <form
              className="navbar__search-form"
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <i
                  className="fa fa-search navbar__search-icon"
                />
                <span
                  className="navbar__input-group "
                >
                  <input
                    className="form-control navbar__search-input"
                    onChange={[Function]}
                    placeholder="Enter Search Terms"
                    size={34}
                    type="text"
                    value=""
                  />
                </span>
              </div>
            </form>
          </div>
          <div
            className="visible-md visible-sm visible-xs"
          >
            <i
              className="fa fa-search navbar__xs-search-icon"
              onClick={[Function]}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`<NavigationBar/> without search but with findByIds 1`] = `
<nav
  className="navbar navbar-container test-loc-nav-header"
>
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="navbar-left col-xs-8 col-md-7"
      >
        <span
          className="navbar-item pull-left"
        />
      </div>
      <div
        className="navbar-right col-xs-4 col-md-5"
      />
    </div>
  </div>
</nav>
`;
